# ProcessManager

./: Cargo.toml  index.html  package-lock.json  tailwind.config.js
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: file_systems.rs  mod.rs  processes.rs
src/components/: navbar.rs
styles/: output.css
